--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.application.name=speedword
-spring.datasource.url=jdbc:mysql://localhost:3306/speedword?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://dpg-d0588o24d50c73ai6d90-a.oregon-postgres.render.com/speedword_db
+spring.datasource.username=speedword_db_user
+spring.datasource.password=JfxqHf8BLIZHWUmTUx75jgbzoJKTGPBD
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-server.port=8080
+spring.datasource.driver-class-name=org.postgresql.Driver
