Speed Word listo para deploy con H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:postgresql://dpg-d0588o24d50c73ai6d90-a.oregon-postgres.render.com/speedword_db
-spring.datasource.username=speedword_db_user
-spring.datasource.password=JfxqHf8BLIZHWUmTUx75jgbzoJKTGPBD
+# H2 embebida en modo archivo (se guarda en el contenedor)
+spring.datasource.url=jdbc:h2:file:./data/speedword;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA config
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+# H2 console (opcional para pruebas)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
